force-app/main/default/objects/Routing_Group_Member__c/Routing_Group_Member__c.object-meta.xml
<CustomObject>
  <label>Routing Group Member</label>
  <pluralLabel>Routing Group Members</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Routing Group Member</label>
    <displayFormat>RG-{0000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>