force-app/main/default/objects/Routing_Group_Member__c/fields/Assigned_Count__c.field-meta.xml
<CustomField>
  <fullName>Assigned_Count__c</fullName>
  <label>Assigned Count</label>
  <type>Number</type>
  <precision>8</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>