force-app/main/default/objects/Routing_Group_Member__c/fields/Group__c.field-meta.xml
<CustomField>
  <fullName>Group__c</fullName>
  <label>Routing Group</label>
  <type>MasterDetail</type>
  <referenceTo>Routing_Group__c</referenceTo>
  <relationshipLabel>Group Members</relationshipLabel>
  <relationshipName>GroupMembers</relationshipName>
</CustomField>