force-app/main/default/objects/Routing_Group_Member__c/fields/Last_Assigned_At__c.field-meta.xml
<CustomField>
  <fullName>Last_Assigned_At__c</fullName>
  <label>Last Assigned At</label>
  <type>DateTime</type>
</CustomField>