force-app/main/default/objects/Routing_Group_Member__c/fields/User__c.field-meta.xml
<CustomField>
  <fullName>User__c</fullName>
  <label>User</label>
  <type>Lookup</type>
  <referenceTo>User</referenceTo>
  <relationshipLabel>Routing Members</relationshipLabel>
  <relationshipName>RoutingMembers</relationshipName>
</CustomField>