force-app/main/default/objects/Routing_Group_Member__c/fields/Weight__c.field-meta.xml
<CustomField>
  <fullName>Weight__c</fullName>
  <label>Weight</label>
  <type>Number</type>
  <precision>3</precision>
  <scale>0</scale>
  <defaultValue>1</defaultValue>
</CustomField>